--- a/HELPSMobileFrontEnd.UITests/HELPSMobileFrontEnd.UITests.csproj
+++ b/HELPSMobileFrontEnd.UITests/HELPSMobileFrontEnd.UITests.csproj
@@ -35,6 +35,9 @@
     <Reference Include="Xamarin.UITest">
       <HintPath>..\packages\Xamarin.UITest.0.7.1\lib\Xamarin.UITest.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HELPSMobileFrontEnd\HELPSMobileFrontEnd.csproj">
