--- a/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
+++ b/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
@@ -53,10 +53,15 @@
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LoginActivity.cs" />
-    <Compile Include="ListSessionsActivity.cs" />
-    <Compile Include="MainMenuActivity.cs" />
     <Compile Include="Resources\RESTClass.cs" />
+    <Compile Include="Activities\ListSessionsActivity.cs" />
+    <Compile Include="Activities\LoginActivity.cs" />
+    <Compile Include="Activities\MainMenuActivity.cs" />
+    <Compile Include="Activities\RegistrationActivity.cs" />
+    <Compile Include="Activities\ProfileActivity.cs" />
+    <Compile Include="Activities\HelpActivity.cs" />
+    <Compile Include="Activities\SearchActivity.cs" />
+    <Compile Include="Activities\ViewBookingsActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
@@ -77,5 +82,6 @@
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Resources\drawable-xhdpi\" />
+    <Folder Include="Activities\" />
   </ItemGroup>
 </Project>
