Added Stylesheet modified Mainpage layout

--- a/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
+++ b/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
@@ -80,6 +80,7 @@
     <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\BookingList.axml" />
     <AndroidResource Include="Resources\values\AppStyles.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ButtonRoundedCorners.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
