--- a/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
+++ b/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
@@ -81,6 +81,7 @@
     <AndroidResource Include="Resources\layout\BookingList.axml" />
     <AndroidResource Include="Resources\values\AppStyles.xml" />
     <AndroidResource Include="Resources\drawable-hdpi\ButtonRoundedCorners.xml" />
+    <AndroidResource Include="Resources\layout\SessionsListViewLayout.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
