--- a/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
+++ b/HELPSMobileFrontEnd/HELPSMobileFrontEnd.csproj
@@ -53,7 +53,6 @@
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\RESTClass.cs" />
     <Compile Include="Activities\ListSessionsActivity.cs" />
     <Compile Include="Activities\LoginActivity.cs" />
     <Compile Include="Activities\MainMenuActivity.cs" />
@@ -62,6 +61,9 @@
     <Compile Include="Activities\HelpActivity.cs" />
     <Compile Include="Activities\SearchActivity.cs" />
     <Compile Include="Activities\ViewBookingsActivity.cs" />
+    <Compile Include="RESTClass.cs" />
+    <Compile Include="zTabs\SlidingTabStrip.cs" />
+    <Compile Include="zTabs\SlidingTabScrollView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
@@ -74,19 +76,20 @@
     <AndroidResource Include="Resources\drawable-mdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ButtonRoundedCorners.xml" />
+    <AndroidResource Include="Resources\layout\BookingList.axml" />
     <AndroidResource Include="Resources\layout\ListSessions.axml" />
     <AndroidResource Include="Resources\layout\Login.axml" />
     <AndroidResource Include="Resources\layout\MainMenu.axml" />
-    <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
-    <AndroidResource Include="Resources\layout\BookingList.axml" />
-    <AndroidResource Include="Resources\values\AppStyles.xml" />
-    <AndroidResource Include="Resources\drawable-hdpi\ButtonRoundedCorners.xml" />
-    <AndroidResource Include="Resources\layout\SessionsListViewLayout.xml" />
     <AndroidResource Include="Resources\layout\Profile.axml" />
+    <AndroidResource Include="Resources\layout\SessionsListViewLayout.xml" />
+    <AndroidResource Include="Resources\values\AppStyles.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Activities\" />
+    <Folder Include="zTabs\" />
   </ItemGroup>
 </Project>
